<resources>
    <string name="app_name">Dating app</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_contact_activity_name">Add contact</string>
    <string name="search_people_activity_name">People nearby</string>

    <string name="enter_login_hint">Enter your login</string>
    <string name="enter_nickname_hint">Enter your nickname</string>
    <string name="next_btn">Next</string>
    <string name="start_btn">Start</string>
    <string name="log_in_btn">Log in</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="create_account_text">Don\'t have an account?</string>
    <string name="login_too_short">Login must be at least 4 characters long</string>
    <string name="login_already_exists">Account with that login already exists</string>
    <string name="set_password_hint">Enter your password</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="auth_token_shared_prefs_filename">com.example.datingapp.AUTH_TOKEN</string>
    <string name="auth_token_key">AUTH_TOKEN</string>
    <string name="location_is_disabled">Location is disabled</string>
    <string name="enable_location_suggestion">Would you like to enable it?</string>

    <string name="password_too_short">Password must be at least 8 characters long</string>
    <string name="passwords_not_equal">Passwords do not match</string>
    <string name="password_too_weak">Password is too weak</string>

    <string name="very_weak_password">Very weak password</string>
    <string name="weak_password">Weak password</string>
    <string name="medium_password">Medium strength password</string>
    <string name="strong_password">Strong password</string>
    <string name="very_strong_password">Very strong password</string>
    <string name="invalid_password_or_non_existing_user">Invalid password or account with that username doesn\'t exist</string>
    <string name="unable_to_get_response">Unable to get response from the server</string>
    <string name="unable_to_update_location">Unable to update user location</string>
    <string name="invalid_password">Invalid password</string>
    <string name="non_existing_user">Account with that username does not exist</string>

    <string name="meters_unit">m</string>
    <string name="kilometers_unit">km</string>

    <string name="menu_contact_list">Contacts</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_settings">Settings</string>

    <string name="open_drawer_desc">Open navigation drawer</string>
    <string name="close_drawer_desc">Close navigation drawer</string>

    <string name="searching_text">Searching...</string>
    <string name="start_search_action">Start search</string>
    <string name="intro_to_search_description">To search people nearby press Start search button</string>
    <string name="no_people_nearby">No people found nearby</string>
    <string name="distance_filter_option">Distance</string>
    <string name="country_filter_option">Country</string>

    <string name="add_contact_intro_message">In order to communicate with someone you both need to add each other to your contact lists.\nTo do this you need to meet in person with your peer and scan each other\'s qr codes.\n\nPlease, provide all necessary permissions</string>

    <string name="options_menu_filter">Filter</string>

    <string name="dialog_title_notice">Notice</string>
    <string name="dialog_title_alert">Alert</string>
    <string name="dialog_generic_error_msg">Error occurred</string>
    <string name="dialog_contact_disconnected_msg">Contact disconnected. You need to reconnect to continue messaging</string>
    <string name="dialog_contact_offline_msg">First you need to establish a connection with a contact</string>
    <string name="dialog_ok_button">OK</string>
    <string name="first_distance_option">50m</string>
    <string name="second_distance_option">200m</string>
    <string name="third_distance_option">500m</string>
    <string name="fourth_distance_option">1km</string>
    <string name="item_not_selected">Not selected</string>

</resources>