<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                style="@style/Widget.Material3.ActionBar.Solid" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance_filter_option"
                style="@style/TextSize22"
                android:layout_marginBottom="16dp"/>

            <SeekBar
                android:id="@+id/distance_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:max="4"
                style="@style/Seekbar"
                android:thumb="@drawable/baseline_circle_24"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/current_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="50 m"
                style="@style/TextSize18.Gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_filter_option"
                style="@style/TextSize22"
                android:layout_marginBottom="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/country_entry_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:hintAnimationEnabled="false"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/country_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/text_edit_padding"
                    android:completionThreshold="1"
                    android:background="@null"
                    android:hint="@string/item_not_selected"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="12dp"
        style="@style/Widget.Material3.Button"
        android:text="Apply">
    </Button>

</FrameLayout>

